Normalize line endings

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "resume-builder",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,15 +18,19 @@
     "@fontsource/roboto-mono": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
     "crypto-js": "^4.2.0",
+    "flat": "^6.0.1",
     "framer-motion": "^11.11.1",
     "html2pdf.js": "^0.10.2",
     "idb-keyval": "^6.2.1",
+    "jsonpath": "^1.1.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.447.0",
     "mongodb": "^6.9.0",
     "next": "14.2.5",
     "next-auth": "^5.0.0-beta.25",
     "node-2fa": "^2.0.3",
     "nodemailer": "^6.9.15",
+    "object-mapper": "^6.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
