--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fontsource/roboto": "^5.1.0",
     "@fontsource/roboto-mono": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
+    "@react-spring/web": "^9.7.5",
     "crypto-js": "^4.2.0",
     "flat": "^6.0.1",
     "framer-motion": "^11.11.1",
@@ -36,6 +37,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
+    "react-use-gesture": "^9.1.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
