Fix deployment workflow for Next.js app by updating build and start commands

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,13 +18,10 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > github-ec2.pem && chmod 600 github-ec2.pem
         ssh -o StrictHostKeyChecking=no -i github-ec2.pem ${USER}@${HOST} '
-        
-        # Display current directory and home directory contents
         echo "Current directory: $(pwd)"
         echo "Listing home directory:"
         ls -la ~
 
-        # Install Node.js if not already installed
         echo "Installing Node.js..."
         if ! command -v nvm &> /dev/null; then
           curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
@@ -33,18 +30,15 @@ jobs:
         fi
         nvm install node
 
-        # Install PM2 if not already installed
         echo "Installing PM2..."
         if ! command -v pm2 &> /dev/null; then
-          npm install -g pm2
+        npm install -g pm2
         fi
 
-        # Set up repo URL, branch and directory
         REPO_URL="https://github.com/RatnadeepRoy01/Resume-Maker.git"
         BRANCH="main"
-        REPO_DIR="$HOME/ProfileNxT"  # Replace with your actual repo folder name if different
+        REPO_DIR="$HOME/ProfileNxT"
 
-        # Clone or pull the latest changes from the repo
         if [ -d "$REPO_DIR/.git" ]; then
           cd "$REPO_DIR"
           git pull origin "$BRANCH"
@@ -53,19 +47,12 @@ jobs:
           cd "$REPO_DIR"
         fi
 
-        # Navigate to the app directory (adjust if necessary)
-        cd "$REPO_DIR"  # Make sure you are in the repo directory
-        echo "Current directory after cloning: $(pwd)"
-
-        # If using Next.js, install dependencies
-        echo "Installing dependencies..."
+        cd "$REPO_DIR"
         npm install
 
-        # If you have the build step in your app
-        echo "Building the app..."
-        npm run build
+        echo "Building Next.js application..."
+        npm run build  # Builds the Next.js application
 
-        # Start/restart the application with PM2
         echo "Starting/restarting application..."
-        pm2 restart server.js || pm2 start server.js
+        pm2 restart npm -- start || pm2 start npm -- start  # Runs the Next.js production server
         '
