--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.699.0",
+    "@aws-sdk/s3-request-presigner": "^3.699.0",
     "@fontsource/fira-code": "^5.1.0",
     "@fontsource/inter": "^5.1.0",
     "@fontsource/merriweather": "^5.1.0",
@@ -18,9 +20,11 @@
     "@fontsource/roboto-mono": "^5.1.0",
     "@hookform/resolvers": "^3.9.0",
     "@react-spring/web": "^9.7.5",
+    "canvas": "^2.11.2",
     "crypto-js": "^4.2.0",
     "flat": "^6.0.1",
     "framer-motion": "^11.11.1",
+    "html-to-image": "^1.11.11",
     "html2pdf.js": "^0.10.2",
     "idb-keyval": "^6.2.1",
     "jsonpath": "^1.1.1",
@@ -32,12 +36,16 @@
     "node-2fa": "^2.0.3",
     "nodemailer": "^6.9.15",
     "object-mapper": "^6.2.0",
+    "pdf-img-convert": "^2.0.0",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^4.9.124",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-use-gesture": "^9.1.3",
+    "react-zoom-pan-pinch": "^3.6.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
