--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,25 @@ jobs:
             cd "$REPO_DIR"
           fi
 
+          # Write environment variables to a .env file
+          echo "Writing environment variables to .env file..."
+          cat <<EOT > .env
+          EMAIL_USER=${EMAIL_USER}
+          EMAIL_PASS=${EMAIL_PASS}
+          NEXT_PUBLIC_SECRET_KEY=${NEXT_PUBLIC_SECRET_KEY}
+          GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
+          GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+          MONGODB_URL=${MONGODB_URL}
+          RESUME_PARSER=${RESUME_PARSER}
+          LINKEDIN_PARSER=${LINKEDIN_PARSER}
+          LINKEDIN_BEARER_TOKEN=${LINKEDIN_BEARER_TOKEN}
+          AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+          AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+          AWS_REGION=${AWS_REGION}
+          AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
+          DOMAIN_NAME=${DOMAIN_NAME}
+          EOT
+
           # Install dependencies and build the app
           npm install
           echo "Building Next.js application..."
