--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -74,20 +74,20 @@ jobs:
           echo "The domain name is: $DOMAIN_NAME"
           echo "The domain name is: ${{ secrets.DOMAIN_NAME }}"
           cat <<EOT > .env
-          EMAIL_USER=${EMAIL_USER}
-          EMAIL_PASS=${EMAIL_PASS}
-          NEXT_PUBLIC_SECRET_KEY=${NEXT_PUBLIC_SECRET_KEY}
-          GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
-          GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
-          MONGODB_URL=${MONGODB_URL}
-          RESUME_PARSER=${RESUME_PARSER}
-          LINKEDIN_PARSER=${LINKEDIN_PARSER}
-          LINKEDIN_BEARER_TOKEN=${LINKEDIN_BEARER_TOKEN}
-          AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-          AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-          AWS_REGION=${AWS_REGION}
-          AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
-          DOMAIN_NAME=${DOMAIN_NAME}
+          EMAIL_USER: ${{ secrets.EMAIL_USER }}
+          EMAIL_PASS: ${{ secrets.EMAIL_PASS }}
+          NEXT_PUBLIC_SECRET_KEY: ${{ secrets.NEXT_PUBLIC_SECRET_KEY }}
+          GITHUB_CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          GITHUB_CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          MONGODB_URL: ${{ secrets.MONGODB_URL }}
+          RESUME_PARSER: ${{ secrets.RESUME_PARSER }}
+          LINKEDIN_PARSER: ${{ secrets.LINKEDIN_PARSER }}
+          LINKEDIN_BEARER_TOKEN: ${{ secrets.LINKEDIN_BEARER_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_S3_BUCKET_NAME: ${{ secrets.AWS_S3_BUCKET_NAME }}
+          DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}
           EOT
 
           # Install dependencies and build the app
