--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,44 +33,9 @@ jobs:
       run: |
         echo "$PRIVATE_KEY" > github-ec2.pem && chmod 600 github-ec2.pem
 
-        # Debugging: Print out all environment variables related to DOMAIN_NAME
-        echo "Debugging DOMAIN_NAME locally:"
-        echo "GitHub Secrets DOMAIN_NAME: ${{ secrets.DOMAIN_NAME }}"
-        echo "Env var DOMAIN_NAME: $DOMAIN_NAME"
-
-        # SSH into EC2 and deploy with extensive debugging
-        ssh -o StrictHostKeyChecking=no -i github-ec2.pem ${USER}@${HOST} << 'EOSSH'
-          # Extensive debugging for environment variables
-          echo "=== DOMAIN_NAME Debugging ==="
-          echo "1. Direct shell environment:"
-          env | grep -i domain_name
-
-          echo "2. Printenv output:"
-          printenv | grep -i domain_name
-
-          echo "3. Echo current environment variables:"
-          echo "DOMAIN_NAME from shell: $DOMAIN_NAME"
-
-          # Ensure bash is used and variables are expanded
-          bash -c 'echo "4. Bash expansion of DOMAIN_NAME: $DOMAIN_NAME"'
-
-          # Install Node Version Manager (NVM) if not present
-          echo "Installing Node.js using NVM..."
-          if ! command -v nvm &> /dev/null; then
-            curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # Load nvm
-          fi
-          nvm install 22  # Install Node.js version 22
-
-          # Install PM2 if not installed
-          echo "Installing PM2..."
-          if ! command -v pm2 &> /dev/null; then
-            npm install -g pm2
-          fi
-
+        # SSH into EC2 and deploy
+        ssh -o StrictHostKeyChecking=no -i github-ec2.pem ${USER}@${HOST} << EOF
           # Setup repository directory
-          REPO_URL="https://github.com/RatnadeepRoy01/Resume-Maker.git"
           REPO_DIR="$HOME/ProfileNxT"
           BRANCH="main"
 
@@ -79,42 +44,39 @@ jobs:
             cd "$REPO_DIR"
             git pull origin "$BRANCH"
           else
-            git clone "$REPO_URL" "$REPO_DIR"
+            git clone "https://github.com/RatnadeepRoy01/Resume-Maker.git" "$REPO_DIR"
             cd "$REPO_DIR"
           fi
 
-          # Write environment variables to a .env file with additional debugging
-          echo "=== Creating .env file ==="
-          echo "DOMAIN_NAME before writing: $DOMAIN_NAME"
-          
+          # Create .env file with all environment variables
           cat > .env << EOT
           EMAIL_USER=${EMAIL_USER}
           EMAIL_PASS=${EMAIL_PASS}
           NEXT_PUBLIC_SECRET_KEY=${NEXT_PUBLIC_SECRET_KEY}
-          GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
-          GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
-          MONGODB_URL=${MONGODB_URL}
-          RESUME_PARSER=${RESUME_PARSER}
-          LINKEDIN_PARSER=${LINKEDIN_PARSER}
-          LINKEDIN_BEARER_TOKEN=${LINKEDIN_BEARER_TOKEN}
-          AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-          AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
-          AWS_REGION=${AWS_REGION}
-          AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
-          DOMAIN_NAME=${DOMAIN_NAME}
+          NEXT_PUBLIC_GITHUB_CLIENT_ID=${GITHUB_CLIENT_ID}
+          NEXT_PUBLIC_GITHUB_CLIENT_SECRET=${GITHUB_CLIENT_SECRET}
+          NEXT_PUBLIC_MONGODB_URL=${MONGODB_URL}
+          NEXT_PUBLIC_RESUME_PARSER=${RESUME_PARSER}
+          NEXT_PUBLIC_LINKEDIN_PARSER=${LINKEDIN_PARSER}
+          NEXT_PUBLIC_LINKEDIN_BEARER_TOKEN=${LINKEDIN_BEARER_TOKEN}
+          NEXT_PUBLIC_AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+          NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+          NEXT_PUBLIC_AWS_REGION=${AWS_REGION}
+          NEXT_PUBLIC_AWS_S3_BUCKET_NAME=${AWS_S3_BUCKET_NAME}
+          NEXT_PUBLIC_DOMAIN_NAME=${DOMAIN_NAME}
           EOT
 
-          # Verify .env file contents
-          echo "=== .env file contents ==="
-          cat .env | grep DOMAIN_NAME
+          # Install Node.js and PM2
+          curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.5/install.sh | bash
+          export NVM_DIR="$HOME/.nvm"
+          [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+          nvm install 22
+          npm install -g pm2
 
-          # Install dependencies and build the app
+          # Install dependencies and build
           npm install
-          echo "Building Next.js application..."
-          npm run build  # Builds the Next.js application
+          npm run build
 
-          # Restart the application using PM2
-          echo "Starting/restarting application..."
-          pm2 restart npm -- start || pm2 start npm -- start  # Runs the Next.js production server
-
-        EOSSH
+          # Start/Restart application
+          pm2 restart npm -- start || pm2 start npm -- start
+EOF
