--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,21 +12,22 @@ on:
 jobs:
   build:
     env:
-        JAVA_VERSION: '21'
+      JAVA_VERSION: '21'
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK ${{env.JAVA_VERSION}}
+    
+    - name: Set up JDK ${{ env.JAVA_VERSION }}
       uses: actions/setup-java@v3
       with:
-        java-version: ${{env.JAVA_VERSION}}
+        java-version: ${{ env.JAVA_VERSION }}
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Print name
-      run: echo "Hello $NAME. $BUILD. Using Java Version $JAVA_VERSION"
-      env:
-        BUILD: 'We are currently running the Build job'
+    
+    - name: Print environment variables for testing
+      run: |
+        echo "Testing environment variables:"
+        echo "NAME: $NAME"
+        echo "JAVA_VERSION: $JAVA_VERSION"
+        echo "BUILD: $BUILD"
